--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,43 @@ section {
 	padding: 0 1.5rem;
 	margin: 0 auto;
 }
+.form-btn {
+	margin-top: 2.5rem;
+	cursor: pointer;
+}
+
+.btn {
+	color: white;
+	font-size: 1.3rem;
+	font-weight: bold;
+	text-transform: uppercase;
+	padding: .5rem 3.5rem;
+	border: none;
+	border-radius: 18rem;
+	display: inline-flex;
+	align-items: center;
+}
+
+.btn-gradient {
+	background-image: var(--gradient-color);
+}
+
+.btn-gradient:hover {
+	background-image: var(--gradient-color-alt);
+}
+
+.btn-purple {
+	background-color: var(--purple-solid);
+}
+.btn-purple:hover {
+	background-color: #56247f;
+}
+
+.dots {
+	font-size: 2.4rem;
+	margin-left: .5rem;
+	opacity: .75;
+}
 /* Header */
 .header {
 	width: 100%;
@@ -77,6 +114,7 @@ section {
 	color: #fff;
 	position: relative;
 	z-index: 1500;
+	cursor: pointer;
 }
 
 .hamburguer-menu .fa-times {
@@ -125,3 +163,244 @@ section {
 	letter-spacing: 2px;
 	padding: 1rem;
 }
+
+/* hero */
+
+.hero {
+	width: 100%;
+	height: 100vh;
+	background: url("/images/hero_background.jpg") center no-repeat;
+	background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	position: relative;
+	z-index: 0;
+}
+
+.hero:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: inherit;
+	height: inherit;
+	background-color: var(--purple-transparent);
+	z-index: -1;
+}
+
+.main-heading {
+	color: white;
+	line-height: 1;
+	text-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.5);
+	margin-bottom: 2.5rem;
+}
+
+.title {
+	font-size: 4.8rem;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+}
+
+.subtitle {
+	font-size: 3.6rem;
+	font-weight: 300;
+	font-family: 'Courgette', cursive;
+}
+
+/* booking section */
+.booking {
+	background-image: var(--gradient-color);
+}
+
+.input-group {
+	margin-bottom: 1.5rem;
+}
+.input-label {
+	display: block;
+	font-size: 1.3rem;
+	text-transform: uppercase;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 1rem;
+}
+
+.input,
+.options {
+	outline: none;
+	border: none;
+	width: 100%;
+	min-height: 4rem;
+	padding: 1rem;
+	font-weight: bold;
+	color: #a5a5a5;
+	letter-spacing: 2px;
+	font-family: 'Open Sans', sans-serif;
+	resize: none;
+}
+
+::placeholder {
+	color: inherit;
+}
+/* Featured hotels section */
+
+.section-head {
+	text-align: center;
+	margin-bottom: 5rem;
+}
+
+.heading {
+	display: block;
+	font-size: 4rem;
+	text-transform: uppercase;
+}
+.sub-heading {
+	font-size: 1.7rem;
+	font-family: 'Courgette', cursive;
+	font-weight: 300;
+	color: #a5a5a5;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+	grid-gap: 2.5rem;
+}
+
+.grid-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.featured-hotels {
+	height: 35rem;
+	color: white;
+	padding: 1rem;
+	position: relative;
+}
+
+.featured-hotels::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--purple-transparent-alt);
+	z-index: -1;
+}
+.hotel-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -2;
+}
+
+.hotel-name {
+	font-size: 2.5rem;
+}
+
+.hotel-price {
+	font-size: 1.8rem;
+}
+
+.hotel-rating {
+	margin: 1rem 0 2.5rem;
+}
+
+.rating {
+	color: var(--yellow-solid);
+}
+
+/* special offer section */
+.offer {
+	background: linear-gradient(to right, rgba(250, 150, 44, .8), rgba(143, 88, 251, .8)),
+		url("./images/the_paradise_bg.jpg") bottom center no-repeat;
+	background-size: cover;
+}
+
+.offer-content {
+	background-color: white;
+	text-align: center;
+	padding: 5rem 1rem;
+	position: relative;
+	overflow: hidden;
+}
+
+.discount {
+	background-color: var(--yellow-solid);
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 1rem;
+	text-transform: uppercase;
+	outline: 2px solid var(--yellow-solid);
+	font-weight: bold;
+}
+
+.paragraph {
+	color: #929191;
+	margin-bottom: 2.5rem;
+}
+
+/* Rooms section */
+.rooms {
+	background-color: #f2f6f9;
+}
+
+.image-wrap {
+	position: relative;
+	height: 25rem;
+}
+
+.image-wrap::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--purple-transparent-alt);
+}
+
+.room-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.room-name {
+	font-size: 2.6rem;
+	background-color: var(--yellow-solid);
+	color: white;
+	padding: .5rem 2rem;
+	position: absolute;
+	left: 0;
+	bottom: 2.5rem;
+	z-index: 10;
+}
+.room-price {
+	display: block;
+	font-size: 3.6rem;
+	font-weight: bold;
+	color: var(--yellow-solid);
+}
+.per-night {
+	color: var(--dark-color);
+	font-size: 1.4rem;
+	font-weight: 100;
+}
+.rooms-btn {
+	color: var(--dark-color);
+}
+.rooms-btn:hover {
+	color: var(--yellow-solid);
+}
+
+/* Contact Form */
