--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*Import the fonts used*/
-@import url('https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400,800&display=swap');
+@import 'https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400, 800&display=swap';
 /*Basic reset*/
 *,
 *::before,
@@ -97,6 +97,9 @@ section {
 	z-index: 1000;
 }
 
+.header.active {
+	background-color: var(--purple-solid);
+}
 /* header styles- nav */
 
 .nav {
@@ -359,16 +362,6 @@ section {
 	height: 25rem;
 }
 
-.image-wrap::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: var(--purple-transparent-alt);
-}
-
 .room-image {
 	width: 100%;
 	height: 100%;
@@ -404,3 +397,247 @@ section {
 }
 
 /* Contact Form */
+
+.contact-content {
+	display: flex;
+	justify-content: center;
+}
+
+.traveler-wrap {
+	display: none;
+}
+
+.contact-form {
+	width: 100%;
+	background-image: var(--gradient-color);
+	padding: 2.5rem;
+}
+.contact-form .input {
+	display: block;
+	background-color: transparent;
+	color: white;
+	font-weight: normal;
+	border-bottom: 2px solid #fff;
+	padding-left: 0;
+}
+
+.bar {
+	display: block;
+	position: relative;
+}
+
+.bar::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 3px;
+	background-color: var(--purple-light);
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: transform .5s;
+}
+
+.contact-form .input:focus + .bar::after {
+	transform: scaleX(1);
+}
+
+/* Footer */
+
+.footer {
+	padding: 5rem 0;
+	background-color: var(--purple-solid);
+	color: white;
+}
+
+.footer-content-brand {
+	margin-bottom: 5rem;
+}
+
+.footer .paragraph {
+	color: inherit;
+}
+
+.footer-heading {
+	text-transform: uppercase;
+	margin-bottom: 2.5rem;
+}
+
+.social-media {
+	display: flex;
+}
+
+.sm-link {
+	height: 4rem;
+	width: 4rem;
+	font-size: 2rem;
+	border: 2px solid var(--yellow-solid);
+	border-radius: 50%;
+	display: flex;
+	margin-right: 1rem;
+	transition: background-color .5s;
+	color: white;
+}
+
+.sm-link:hover {
+	background-color: var(--yellow-solid);
+	color: var(--dark-color);
+}
+
+.sm-link i {
+	margin: auto;
+}
+
+/* mediasqueries */
+
+@media screen and (min-width: 768px) {
+	.header {
+		height: 10rem;
+	}
+	.header.active {
+		height: 6rem;
+	}
+
+	/* 	hero */
+	.title {
+		font-size: 8rem;
+	}
+	/* contact section */
+	.contact-content {
+		justify-content: space-between;
+	}
+	.traveler-wrap {
+		display: block;
+		flex: 0 0 45%;
+	}
+	.traveler-wrap img {
+		width: 100%;
+	}
+	.contact-form {
+		flex: 0 0 50%;
+		align-self: flex-start;
+	}
+	.input-group-wrap {
+		display: flex;
+	}
+	.input-group-wrap .input-group {
+		width: 50%;
+		margin-right: 2rem;
+	}
+	.input-group-wrap .input-group:last-child {
+		margin-right: 0;
+	}
+
+	/* 	footer */
+
+	.footer {
+		overflow-x: hidden;
+	}
+	.footer-content {
+		display: flex;
+		justify-content: space-between;
+	}
+	.footer-content-brand {
+		margin-bottom: 0;
+		flex: 0 0 60%;
+	}
+	.footer .paragraph {
+		margin-top: 2.5rem;
+	}
+	.footer-heading {
+		margin-bottom: 5rem;
+	}
+	.social-media-wrap {
+		flex: 0 0 40%;
+		margin-left: 2.5rem;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.room-name {
+		font-size: 1.6rem;
+	}
+	.image-wrap {
+		flex: 1.5;
+	}
+	.room-info-wrap {
+		flex: 2;
+	}
+	section:not(.booking) {
+		padding: 10rem 0;
+	}
+
+	/* header */
+	.hamburguer-menu {
+		display: none;
+	}
+	.nav-list {
+		position: initial;
+		width: initial;
+		height: initial;
+		background-color: transparent;
+		flex-direction: row;
+		justify-content: initial;
+		opacity: 1;
+		transform: scale(1);
+	}
+	.nav-item:not(:last-child) {
+		margin-right: 3rem;
+		margin-bottom: 0;
+	}
+
+	.nav-link {
+		font-size: 1.6rem;
+		font-weight: normal;
+		transition: color .5s;
+	}
+	.nav-link:hover {
+		color: var(--yellow-solid);
+	}
+
+	/* hero section styles  */
+
+	.title {
+		font-size: 12rem;
+	}
+	.subtitle {
+		font: 4.6rem;
+	}
+
+	/* 	booking section */
+	.booking .form {
+		display: flex;
+		justify-content: space-between;
+	}
+	.booking .form .input-group {
+		margin-bottom: 0;
+	}
+	.booking .form .input-group:first-child {
+		flex: 0 0 20%;
+	}
+	.input,
+	.options {
+		min-width: 10rem;
+	}
+
+	/* rooms grid section */
+
+	.rooms-grid {
+		grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+		grid-gap: 8rem;
+	}
+	.featured-rooms {
+		flex-direction: row;
+		align-items: flex-start;
+	}
+	.room-info-wrap {
+		margin-left: 1.5rem;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.booking .form .input-group:first-child {
+		flex: 0 0 30%;
+	}
+}
